mark end of metadata

--- a/43-00-Trigonometry.tex
+++ b/43-00-Trigonometry.tex
@@ -31,6 +31,8 @@
 \pmdefines{cosecant}
 \pmdefines{cotangent}
 
+\endmetadata
+
 \usepackage{pstricks}
 \usepackage{graphicx}
 %%%\usepackage{xypic}
