--- a/43-XX-TableOfValuesForcosx.tex
+++ b/43-XX-TableOfValuesForcosx.tex
@@ -16,6 +16,8 @@
 \pmclassification{msc}{42-XX}
 \pmclassification{msc}{33Bxx}
 
+\endmetadata
+
 \usepackage{supertabular}
 \begin{document}
 \begin{supertabular}{||c|c||}
