--- a/43-XX-TableOfValuesForsinx.tex
+++ b/43-XX-TableOfValuesForsinx.tex
@@ -16,6 +16,8 @@
 \pmclassification{msc}{42-XX}
 \pmclassification{msc}{33Bxx}
 
+\endmetadata
+
 \usepackage{graphicx}
 %%%\usepackage{xypic} 
 \usepackage{bbm}
