--- a/43-00-ProofOfAngleSumIdentities.tex
+++ b/43-00-ProofOfAngleSumIdentities.tex
@@ -16,6 +16,8 @@
 \pmclassification{msc}{42-00}
 \pmclassification{msc}{33B10}
 
+\endmetadata
+
 % this is the default PlanetMath preamble.  as your knowledge
 % of TeX increases, you will probably want to edit this, but
 % it should be fine as is for beginners.
