--- a/43A65-IrreducibleUnitaryRepresentationsOfCompactGroupsAreFinitedimensional.tex
+++ b/43A65-IrreducibleUnitaryRepresentationsOfCompactGroupsAreFinitedimensional.tex
@@ -22,6 +22,8 @@
 \pmdefines{unitary representation of compact group has an irreducible subrepresentation}
 \pmdefines{unitary group of a complex Hilbert space}
 
+\endmetadata
+
 % this is the default PlanetMath preamble.  as your knowledge
 % of TeX increases, you will probably want to edit this, but
 % it should be fine as is for beginners.
