--- a/43A65-TopologicalGroupRepresentation.tex
+++ b/43A65-TopologicalGroupRepresentation.tex
@@ -17,6 +17,8 @@
 \pmsynonym{representation of topological groups}{TopologicalGroupRepresentation}
 \pmdefines{equivalent representations of topological groups}
 
+\endmetadata
+
 % this is the default PlanetMath preamble.  as your knowledge
 % of TeX increases, you will probably want to edit this, but
 % it should be fine as is for beginners.
